Introduction of restservice + caching of letter grades & examinable c… (#814)
* Introduction of restservice + caching of letter grades & examinable courses.

* increase coverage.

* increase coverage.

* ut fix

* ut fix

* ut fix

* ut fix

* ut fix

* UT fix - Nats failure

* More coverage.

* Sonar fixes.

* Sonar fixes.

* GRAD2-3409 - Adding WebClient and IaC code changes

* GRAD2-3409 - Updated token issuer url

* GRAD2-3409 - Adding scopes

---------

Co-authored-by: Kamal Mohammed <kamal.mohammed@outlook.com>